WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
113716
[BlackBerry] canvas is not rendering correctly for www.html5-benchmark.com
https://bugs.webkit.org/show_bug.cgi?id=113716
Summary
[BlackBerry] canvas is not rendering correctly for www.html5-benchmark.com
Konrad Piascik
Reported
2013-04-01 12:22:51 PDT
[BlackBerry] canvas is not rendering correctly for www.html5-benchmark.com
Attachments
Patch
(1.91 KB, patch)
2013-04-01 12:28 PDT
,
Konrad Piascik
rwlbuis
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
Patch
(1.86 KB, patch)
2013-04-01 13:29 PDT
,
Konrad Piascik
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Konrad Piascik
Comment 1
2013-04-01 12:28:12 PDT
Created
attachment 196006
[details]
Patch
Rob Buis
Comment 2
2013-04-01 12:29:05 PDT
Comment on
attachment 196006
[details]
Patch Ok.
WebKit Review Bot
Comment 3
2013-04-01 12:31:08 PDT
Comment on
attachment 196006
[details]
Patch Rejecting
attachment 196006
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=webkit-commit-queue.appspot.com', '--bot-id=gce-cq-03', 'apply-attachment', '--no-update', '--non-interactive', 196006, '--port=chromium-xvfb']" exit_code: 2 cwd: /mnt/git/webkit-commit-queue Last 500 characters of output: commit-queue Parsed 2 diffs from patch file(s). patching file Source/WebCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Source/WebCore/platform/blackberry/PlatformScreenBlackBerry.cpp Hunk #1 FAILED at 64. 1 out of 1 hunk FAILED -- saving rejects to file Source/WebCore/platform/blackberry/PlatformScreenBlackBerry.cpp.rej Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', '--force', '--reviewer', 'Rob Buis']" exit_code: 1 cwd: /mnt/git/webkit-commit-queue Full output:
http://webkit-commit-queue.appspot.com/results/17297622
Konrad Piascik
Comment 4
2013-04-01 12:34:41 PDT
Comment on
attachment 196006
[details]
Patch will rebase
Konrad Piascik
Comment 5
2013-04-01 13:29:37 PDT
Created
attachment 196016
[details]
Patch
Rob Buis
Comment 6
2013-04-01 13:36:20 PDT
Comment on
attachment 196016
[details]
Patch Retry.
WebKit Review Bot
Comment 7
2013-04-01 22:42:19 PDT
Comment on
attachment 196016
[details]
Patch Clearing flags on attachment: 196016 Committed
r147385
: <
http://trac.webkit.org/changeset/147385
>
WebKit Review Bot
Comment 8
2013-04-01 22:42:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug