[BlackBerry] canvas is not rendering correctly for www.html5-benchmark.com https://bugs.webkit.org/show_bug.cgi?id=113716

Patch by Konrad Piascik <kpiascik@blackberry.com> on 2013-04-01
Reviewed by Rob Buis.

PR 317205
Internally reivewed by: Mike Lattanzio, Jacky Jiang

This is a site issue where they detect physical pixels by multiplying
availWidth * devicePixelRatio.  This gives us an invalid result since
we don't round the CSS pixels that are reported to availWidth and availHeight.

* platform/blackberry/PlatformScreenBlackBerry.cpp:
(WebCore::toUserSpace):

Canonical link: https://commits.webkit.org/132067@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147385 268f45cc-cd09-0410-ab3c-d52691b4dbfc