Source/WebCore/platform/blackberry/PlatformScreenBlackBerry.cpp
@@ -52,8 +52,10 @@ static FloatRect toUserSpace(FloatRect rect, Widget* widget)
 {
     if (widget->isFrameView()) {
         Page* page = toFrameView(widget)->frame()->page();
-        if (page && !page->settings()->applyDeviceScaleFactorInCompositor())
+        if (page && !page->settings()->applyDeviceScaleFactorInCompositor()) {
             rect.scale(1 / page->deviceScaleFactor());
+            rect.setSize(expandedIntSize(rect.size()));
+        }
     }
     return rect;
 }
